--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a class="title" href="#about">Sobre</a></li>
           <li><a class="title" href="#services">Serviços</a></li>
           <li><a class="title" href="#testimonials">Depoimentos</a></li>
-          <li><a class="title" href="#contact">Contatos</a></li>
+          <li><a class="title" href="#contact">Contato</a></li>
         </ul>
       </div>
       <div class="toggle icon-menu"></div>
