--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <header id="header" class="scroll">
+  <header id="header">
     <nav class="container">
       <a class="logo" href="#home">beauty<span>salon</span>.</a>
       <div class="menu">
